# ZenVox

./: .gitignore  LICENSE  README.md  build.bat  config.py  dictionary.py  history.py  install.py  providers.py  pyproject.toml  whisper.py  zenvox.py  zenvox.spec
.claude/: settings.local.json
asr-server/: launch.sh  server.py  zenvox-asr.service
tests/: test_config.py  test_dictionary.py  test_engine_reliability.py  test_providers.py
