[project]
name = "zenvox"
version = "1.0.0"
description = "Voice to text, cleaned by AI. Fast, private, always ready."
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ZenSystem" },
]

# Core dependencies — always required
dependencies = [
    "customtkinter>=5.2",
    "numpy>=2.0",
    "pyautogui>=0.9",
    "pyperclip>=1.9",
    "pystray>=0.19",
    "sounddevice>=0.5",
    "Pillow>=12.0",
    "faster-whisper>=1.1",
]

[project.optional-dependencies]
# Cleaning providers — install the ones you want to use
gemini = ["google-generativeai>=0.8"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.80"]
groq = ["groq>=0.9"]
# All providers
all = [
    "google-generativeai>=0.8",
    "openai>=1.0",
    "anthropic>=0.80",
    "groq>=0.9",
]
# GPU acceleration (NVIDIA CUDA)
gpu = ["ctranslate2>=4.5"]

[project.scripts]
zenvox = "whisper:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
